--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Sketch Pad</h1>
         <div class="btn">
-            <button>New Canvas</button>
+            <button>Clear Canvas</button>
         </div>
         <div id="sketchPad"></div>
     </body>
