Add customizable canvas (16-100)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <h1>Sketch Pad</h1>
+        <h2 id="canvasSize"></h2>
         <div class="btn">
-            <button>Clear Canvas</button>
+            <button>New Canvas</button>
         </div>
         <div id="sketchPad"></div>
     </body>
